--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
 }
 
-#htt {font-family:Helvetica, sans-serif;font-size:18px;font-style:italic;font-weight:normal;color:#000000;}
+#htt {font-family:Helvetica, sans-serif;font-size:16px;font-style:italic;font-weight:normal;color:blue;}
 
 #onlypara {
   font-family:Helvetica, sans-serif;
@@ -47,16 +47,11 @@
   background-color: #eee;
 }
 
-#college {
+#college{
   background-color: #555;
-  color: white;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 15px 15px;
-  font-size: 25px;
-  width: 100%;
+   color: white;
+   font-size: 25px;
+     padding: 15px 15px;
 }
 
 #footnote {
@@ -69,29 +64,20 @@
   padding: 10px 10px;
   font-size: 15px;
   width: 10%;
-}
-
-#footnote1 {
-  background-color: #ffffff;
-  color: black;
-  float: right;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 10px 10px;
-  font-size: 15px;
-  width: 10%;
+  margin-left:3px;
+  text-align: center;
 }
 
 footer {
    position: fixed;
-   bottom : 0;
-   width: 98%;
+   left: 1;
+   bottom: 0;
+   width: 99%;
+   height:10%;
    background-color: #555;
    color: white;
-   padding: 6px 6px 6px 6px;
-   font-size: 12px;
    text-align: center;
+   padding: 1px 1px;
 }
 
 table.GeneratedTable {
@@ -134,13 +120,14 @@ h1 {
 }
 
 .row {
-  margin: 8px -16px;
+  margin: 7px;
+    margin-left: 7px;
 }
 
 /* Add padding BETWEEN each column */
 .row,
 .row > .column {
-  padding: 10px;
+  padding: 8px;
 }
 
 /* Create four equal columns that floats next to each other */
@@ -157,22 +144,36 @@ h1 {
 }
 
 /* Content */
-.content {
+.content1 {
+	margin-left:2px;
   background-color: white;
   padding: 8px;
+}
+
+.heading {
+	left:6px;
+}
+
+.database {
+  margin-left:18px;
+  background-color: white;
+  padding: 8px;
+  width:92%;
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .column {
-    width: 50%;
+	 margin-left:6px;
+    width: 20%;
+	  padding: 8px;
   }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 250px) {
   .column {
-    width: 100%;
+    width: 20%;
   }
 }
 
